--- a/BSiNS/Src/Components/com_Modal_1.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal_1.fx.yaml
@@ -58,7 +58,7 @@ com_Modal_1 As CanvasComponent:
                     ZIndex: =1
 
                     txt_ModalHeader_1 As Text:
-                        Align: ='TextCanvas.Align'.Center
+                        Align: ='TextCanvas.Align'.Start
                         AutoHeight: =true
                         BorderStyle: =""
                         DisplayMode: =DisplayMode.Edit
@@ -68,7 +68,7 @@ com_Modal_1 As CanvasComponent:
                         LayoutMinHeight: =32
                         LayoutMinWidth: =96
                         Size: =20
-                        Text: =
+                        Text: ="Zahtjev za povrat"
                         Width: =96
                         X: =0
                         Y: =0
