--- a/BSiNS/Src/Components/com_Footer.fx.yaml
+++ b/BSiNS/Src/Components/com_Footer.fx.yaml
@@ -1,5 +1,5 @@
 com_Footer As CanvasComponent:
-    ErrorBaseOnModalExists: =true
+    ErrorBaseOnModalExists: =false
     Fill: =RGBA(0, 0, 0, 0)
     Height: =50
     IsInventura: =false
