--- a/BSiNS/Src/Components/com_Galleries.fx.yaml
+++ b/BSiNS/Src/Components/com_Galleries.fx.yaml
@@ -296,8 +296,12 @@ com_Galleries As CanvasComponent:
                     DisabledColor: =RGBA(244, 244, 244, 1)
                     Height: =32
                     Icon: =Icon.Trash
-                    OnSelect: |
+                    OnSelect: |-
                         =Remove(colLines, LookUp(colLines, 'Line_No.' = glr_Lines.Selected.'Line_No.'));
+                        Set(
+                            SelectedLine,
+                            Last(colLines)
+                        );
                     Visible: |-
                         =!com_Galleries.VisibleResEntryList && com_Galleries.AddNew && IsBlank(
                             LookUp(
@@ -874,8 +878,12 @@ com_Galleries As CanvasComponent:
                     DisabledColor: =RGBA(244, 244, 244, 1)
                     Height: =32
                     Icon: =Icon.Trash
-                    OnSelect: |
+                    OnSelect: |-
                         =Remove(colEntries, LookUp(colEntries, Entry_No = glr_Entries.Selected.Entry_No));
+                        Set(
+                            SelectedEntry,
+                            Last(colEntries)
+                        );
                     Visible: |-
                         =com_Galleries.VisibleResEntryList && com_Galleries.AddNew && IsBlank(
                             LookUp(
