--- a/BSiNS/Src/Components/com_Galleries.fx.yaml
+++ b/BSiNS/Src/Components/com_Galleries.fx.yaml
@@ -70,7 +70,7 @@ com_Galleries As CanvasComponent:
             "glr_Lines As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
                 AlignInContainer: =AlignInContainer.SetByContainer
                 BorderColor: =App.Theme.Colors.Darker40
-                Default: |-
+                Default: |+
                     =LookUp(
                         colLines,
                         If(
@@ -79,8 +79,10 @@ com_Galleries As CanvasComponent:
                             Barcode = ScannedItem
                         )
                     )
+                    
                 DelayItemLoading: =true
-                Items: =colLines
+                Items: |
+                    =If(!IsBlank(ScannedItem), Filter(colLines, Barcode = Text(ScannedItem)), colLines)
                 Layout: =Layout.Vertical
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
