--- a/BSiNS/Src/Components/com_Header.fx.yaml
+++ b/BSiNS/Src/Components/com_Header.fx.yaml
@@ -130,7 +130,7 @@ com_Header As CanvasComponent:
                 TextAlignment: =Align.Center
                 TextColor: =RGBA(184, 0, 0, 1)
                 VerticalAlign: =VerticalAlign.Middle
-                Visible: =isMobile
+                Visible: =isMobile && App.ActiveScreen = scr_XMLTemeljniceInventure
                 Width: =100
                 X: =40
                 Y: =40
