--- a/BSiNS/Src/Components/com_Galleries.fx.yaml
+++ b/BSiNS/Src/Components/com_Galleries.fx.yaml
@@ -75,8 +75,7 @@ com_Galleries As CanvasComponent:
                         colLines,
                         If(
                             !IsBlank(SelectedLine.'Line_No.'),
-                            'Line_No.' = SelectedLine.'Line_No.',
-                            Barcode = ScannedItem
+                            'Line_No.' = SelectedLine.'Line_No.'
                         )
                     )
                     
