--- a/BSiNS/Src/Components/com_Header.fx.yaml
+++ b/BSiNS/Src/Components/com_Header.fx.yaml
@@ -101,10 +101,14 @@ com_Header As CanvasComponent:
                 LayoutMinHeight: =45
                 LayoutMinWidth: =280
                 OnCancel: =false
-                OnScan: |
+                OnScan: |-
                     =Set(
                         ScannedItem,
                         First(BarcodeReader2.Barcodes).Value
+                    );
+                    Set(
+                        SelectedLine,
+                        LookUp(colLines, Barcode = ScannedItem)
                     );
                     
                     If(
