--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -300,7 +300,7 @@ com_Modal As CanvasComponent:
                             Type: ="Text"
                             ValidationState: |-
                                 =If(
-                                    !IsNumeric(inp_rezQty_2.Value) || Value(inp_rezQty_2.Value) < 0 || (com_Modal.IsNabavniNalog && Value(inp_rezQty_2.Value) = 0),
+                                    !IsNumeric(inp_rezQty_2.Value) || Value(inp_rezQty_2.Value) < 0 /*|| (com_Modal.IsNabavniNalog && Value(inp_rezQty_2.Value) = 0)*/,
                                     "Value_Error",
                                     If(
                                         com_Modal.IsInventura && (IsBlank(inp_rezQty_2.Value) || (IsBlank(LookUp(lockedItems, lineId = com_Modal.LineId)) && Value(inp_rezQty_2.Value) = 0)),
