--- a/BSiNS/Src/Components/com_Footer.fx.yaml
+++ b/BSiNS/Src/Components/com_Footer.fx.yaml
@@ -171,6 +171,7 @@ com_Footer As CanvasComponent:
                 Height: =Parent.Height
                 Size: =13
                 Text: =""
+                Visible: =!com_Footer.IsInventura
                 Width: =15
                 ZIndex: =3
 
@@ -277,6 +278,7 @@ com_Footer As CanvasComponent:
                         false
                     );
                 Text: ="Sačuvaj"
+                Visible: =!com_Footer.IsInventura
                 Width: =96
                 X: =39
                 Y: =12
