--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -128,11 +128,138 @@ com_Modal As CanvasComponent:
                     PaddingBottom: =10
                     ZIndex: =2
 
+                    Container13_13 As groupContainer.verticalAutoLayoutContainer:
+                        AlignInContainer: =AlignInContainer.SetByContainer
+                        LayoutAlignItems: =LayoutAlignItems.Center
+                        LayoutDirection: =LayoutDirection.Vertical
+                        LayoutJustifyContent: =LayoutJustifyContent.End
+                        LayoutMinHeight: =30
+                        LayoutMinWidth: =250
+                        LayoutMode: =LayoutMode.Auto
+                        RadiusBottomLeft: =4
+                        RadiusBottomRight: =4
+                        RadiusTopLeft: =4
+                        RadiusTopRight: =4
+                        Visible: =com_Modal.IsNabavniNalog
+                        ZIndex: =1
+
+                        TextCanvas3_14 As Text:
+                            AutoHeight: =true
+                            BorderStyle: =""
+                            DisplayMode: =DisplayMode.Edit
+                            FontColor: =
+                            Height: =32
+                            LayoutMinHeight: =32
+                            LayoutMinWidth: =80
+                            Size: =20
+                            Text: ="LOT dobavljača"
+                            Width: =200
+                            X: =40
+                            Y: =40
+                            ZIndex: =1
+
+                        "inp_LotNo_1 As 'Text input'":
+                            Align: ='TextInputCanvas.Align'.Center
+                            Appearance: ='TextInputCanvas.Appearance'.Outline
+                            BasePaletteColor: =
+                            BorderStyle: =""
+                            DisplayMode: =DisplayMode.Edit
+                            FontSize: =0
+                            Height: =32
+                            LayoutMinHeight: =32
+                            LayoutMinWidth: =320
+                            OnChange: =If(!IsBlank(inp_LotNo_1.Value) && Left(inp_LotNo_1.Value, 3) <> "LOT", inp_LotNo_1.Value = "LOT" & inp_LotNo_1.Value)
+                            Placeholder: ="Unesite LOT"
+                            Required: =true
+                            TriggerOutput: ='TextInputCanvas.TriggerOutput'.Keypress
+                            Type: ="Text"
+                            ValidationState: |-
+                                =If(
+                                    com_Modal.LotNoPropVisible && IsBlank(inp_LotNo_1.Value),
+                                    "RequiredField_Error",
+                                    If(//provjera da je u formatu LOT050824 (LOT + Datum u formatu ddMMyy)
+                                        IsMatch(
+                                            inp_LotNo_1.Value,
+                                            "^LOT(0[1-9]|[12][0-9]|3[01])(0[1-9]|1[0-2])([0-9]{2})$"
+                                        ),
+                                        If(//provjerava da odabrani datum nije danasnji ili neki raniji - mora biti u buducnosti!
+                                            DateValue(
+                                                Mid(
+                                                    inp_LotNo_1.Value,
+                                                    4,
+                                                    2
+                                                ) & "/" & Mid(
+                                                    inp_LotNo_1.Value,
+                                                    6,
+                                                    2
+                                                ) & "/" & "20" & Mid(
+                                                    inp_LotNo_1.Value,
+                                                    8,
+                                                    2
+                                                )
+                                            ) > Today(),
+                                            "None",
+                                            "IncorrectDateRange"
+                                        ),
+                                        "IncorrectFormat"
+                                    )
+                                )
+                            Value: |-
+                                =If(
+                                    IsBlank(com_Modal.LotNo),
+                                    "LOT" & Text(
+                                        DateAdd(
+                                            Today(),
+                                            1
+                                        ),
+                                        "ddmmyy"
+                                    ),
+                                    com_Modal.LotNo
+                                )
+                            Visible: =true
+                            Width: =200
+                            X: =40
+                            Y: =40
+                            ZIndex: =3
+
+                        TextCanvas1_2 As Text:
+                            AlignInContainer: =AlignInContainer.Center
+                            AutoHeight: =false
+                            BorderStyle: =""
+                            DisplayMode: =DisplayMode.Edit
+                            FontColor: =RGBA(215, 58, 60, 1)
+                            Height: =20
+                            LayoutMinHeight: =32
+                            LayoutMinWidth: =96
+                            PaddingBottom: =0
+                            PaddingLeft: =0
+                            PaddingRight: =0
+                            PaddingTop: =0
+                            Size: =14
+                            Text: |-
+                                =If(
+                                    inp_LotNo_1.ValidationState = "RequiredField_Error",
+                                    "LOT dobavljača je obavezno polje",
+                                    If(
+                                        inp_LotNo_1.ValidationState = "IncorrectFormat",
+                                        "Format nije ispravan",
+                                        If(
+                                            inp_LotNo_1.ValidationState = "IncorrectDateRange",
+                                            "Odabrani datum je istekao"
+                                        )
+                                    )
+                                )
+                            Visible: =true
+                            Width: =200
+                            X: =0
+                            Y: =0
+                            ZIndex: =4
+
                     Container13_12 As groupContainer.verticalAutoLayoutContainer:
                         AlignInContainer: =AlignInContainer.SetByContainer
                         LayoutAlignItems: =LayoutAlignItems.Center
                         LayoutDirection: =LayoutDirection.Vertical
-                        LayoutJustifyContent: =LayoutJustifyContent.Center
+                        LayoutJustifyContent: =LayoutJustifyContent.End
                         LayoutMinHeight: =30
                         LayoutMinWidth: =250
                         LayoutMode: =LayoutMode.Auto
@@ -141,7 +268,7 @@ com_Modal As CanvasComponent:
                         RadiusTopLeft: =4
                         RadiusTopRight: =4
                         Visible: =com_Modal.LotNoPropVisible || (com_Modal.IsNabavniNalog && com_Modal.LotNoPropVisible)
-                        ZIndex: =1
+                        ZIndex: =2
 
                         TextCanvas3_12 As Text:
                             AutoHeight: =true
@@ -373,7 +500,6 @@ com_Modal As CanvasComponent:
                         AlignInContainer: =AlignInContainer.SetByContainer
                         LayoutAlignItems: =LayoutAlignItems.Center
                         LayoutDirection: =LayoutDirection.Vertical
-                        LayoutJustifyContent: =LayoutJustifyContent.Center
                         LayoutMinHeight: =30
                         LayoutMinWidth: =250
                         LayoutMode: =LayoutMode.Auto
@@ -507,7 +633,35 @@ com_Modal As CanvasComponent:
                                         Lot_No: Text(inp_LotNo.Value),
                                         Qty_Phys_Inventory: Value(inp_rezQty_2.Value)
                                     }
-                                ),
+                                );
+                                Set(
+                                isLoading,
+                                true
+                            );
+                            Set(JsonData1, "{" & Char(34) & "Lines" & Char(34) & ": " & "{" & Char(34) & "Item_Journal_Line" & Char(34) & ":" & JSON(colLines) & "}" & "}");
+                                IfError(
+                                    UpdateXML.Run(
+                                        JsonData1,
+                                        SelectedFile,
+                                        SelectedQueue
+                                    ),
+                                    Notify(
+                                        "Došlo je do greške!",
+                                        NotificationType.Error,
+                                        500
+                                    ),
+                                    Notify(
+                                        "Uspješno ažuriranje!",
+                                        NotificationType.Success,
+                                        500
+                                    );
+                                    
+                                );
+                                Set(
+                                    isLoading,
+                                    false
+                                );
+                                ,
                                 If(
                                     com_Modal.IsNabavniNalog,
                                     Patch(
