--- a/BSiNS/Src/Components/com_Footer.fx.yaml
+++ b/BSiNS/Src/Components/com_Footer.fx.yaml
@@ -255,6 +255,7 @@ com_Footer As CanvasComponent:
                         isLoading,
                         true
                     );
+                    Set(anisa, com_Footer.JSONData);
                     IfError(
                         UpdateXML.Run(
                             com_Footer.JSONData,
