--- a/BSiNS/Src/Components/com_Footer.fx.yaml
+++ b/BSiNS/Src/Components/com_Footer.fx.yaml
@@ -260,7 +260,8 @@ com_Footer As CanvasComponent:
                         UpdateXML.Run(
                             com_Footer.JSONData,
                             SelectedFile,
-                            SelectedQueue
+                            SelectedQueue,
+                            logedUser
                         ),
                         Notify(
                             "Došlo je do greške!",
