--- a/BSiNS/Src/App.fx.yaml
+++ b/BSiNS/Src/App.fx.yaml
@@ -8,8 +8,7 @@ App As appinfo:
             Email = User().Email
         );*/
         
-        logedUser = "anisaaa";
-        //LookUp(Contacts, User().Email = Email).'User Name';
+        logedUser = LookUp(Contacts, User().Email = Email).'User Name';
         
         warehouseCode = "SGP-DZ";
         isMobile = If(
